[project]
name = "hello-pdf-submission-xblock"
version = "0.1.3"
dependencies = []   # keep empty to avoid image build conflicts

[project.entry-points."xblock.v1"]
hello-pdf-submission = "hello_pdf_submission:HelloPdfSubmissionXBlock"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"